# QDNNS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: distance.hpp  vector_ops.hpp
include/flat/: IndexFlat.hpp  Makefile  distance.h  flat_gpu.hpp  knncuda.cu  test  test.cpp
include/gpu/: AlignedTable.h  AuxIndexStructures.cpp  AuxIndexStructures.h  BlockInvertedLists.cpp  BlockInvertedLists.h  BlockSelectFloat.cu  BlockSelectFloat1.cu  BlockSelectFloat128.cu  BlockSelectFloat256.cu  BlockSelectFloat32.cu  BlockSelectFloat64.cu  BlockSelectFloatF1024.cu  BlockSelectFloatF2048.cu  BlockSelectFloatF512.cu  BlockSelectFloatT1024.cu  BlockSelectFloatT2048.cu  BlockSelectFloatT512.cu  BlockSelectImpl copy.cuh  BlockSelectKernel.cuh  BroadcastSum.cu  BroadcastSum.cuh  CMakeLists.txt  Clustering.cpp  Clustering.h  CodePacker.cpp  CodePacker.h  Comparators.cuh  ConversionOperators.cuh  CopyUtils.cuh  DeviceTensor.cuh  DeviceUtils.cu  DeviceUtils.h  DeviceVector.cuh  DirectMap.cpp  DirectMap.h  Distance.cu  Distance.cuh  DistanceComputer.h  DistanceUtils.cuh  FaissAssert.h  (+115 more)
include/graph/: diskann.hpp  hnsw.hpp  vamana.hpp
include/utils/: binary.hpp  binary_io.hpp  dataloader.hpp  get_recall.hpp  recall.hpp  resize.hpp  stimer.hpp  timer.hpp  tqdm.hpp
script/: NDC_R.ipynb  binary_io.py  check_data.ipynb  config.json  difficulty.ipynb  lightgbm.ipynb  lightgbm_classification.py  lightgbm_combine.py  lightgbm_exp.py  lightgbm_regression.py  motivation.ipynb  plot_qps_recall.ipynb  run.sh
test/: difficulty.cpp  flat_cpu.cpp  flat_gpu.cpp  gt.cpp  gt_cpu.cpp  gt_gpu.cpp  hnns.cpp  hnsw_build.cpp  hnsw_get_data.cpp  hnsw_run.cpp  qdnns.cpp  test_dataloader.cpp
